# hashcode2017

./: README.md
olivier/videos/: all.sh  run.py  videos.scala
practice/balloons/: run.py
practice/drones/: run.py
practice/drones/redundancy/: res_96347
practice/mdf2016/: run.py
practice/painting/: paint.py
practice/pizza/: run.py  test_round.in
practice/pizza/olivier/: run.py
practice/satellites/olivier/: run.py
practice/satellites/stephane/: main.cpp
practice/servers/: res_0000000400  res_0000000418  run.py
practice/streetview/: log  run.py
raph/: Hashcode.Qualif.csproj  Hashcode.Qualif.sln  Helper.cs  Input.cs  Parser.cs  Program.cs  Solution.cs  Solver.cs  packages.config
raph/Properties/: AssemblyInfo.cs
stephane/: Makefile  main.cpp
stephane/templates/: .gitignore  Assignement.h  Pool.h  Simplex.cpp  SimulatedAnnealing.cpp  fft.cpp  geometry.cpp  hilbert.cpp  misc.cpp  search.cpp  unionfind.cpp
stephane/templates/cmakebuild/src/: CMakeLists.txt  Makefile  main.cpp
stephane/templates/visu/: Makefile  Visu.cpp  Visu.h  main.cpp
